# ilib-ac-tortoise

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ac-local-plugin/: CMakeLists.txt  loader-schema.json
ac-local-plugin/code/: CMakeLists.txt  LocalTortoise.cpp  aclp-tortoise-interface.hpp
ac-local-plugin/example/: CMakeLists.txt  ep-tts.cpp
ac-local-plugin/schema/: CMakeLists.txt
ac-local-plugin/schema-gen/: CMakeLists.txt  schema-gen.cpp
ac-local-plugin/schema/ac/schema/: TortoiseCpp.hpp
code/: CMakeLists.txt
code/ac/tortoise/: Init.cpp  Init.hpp  Instance.cpp  Instance.hpp  Logging.cpp  Logging.hpp  Model.cpp  Model.hpp  common.cpp  common.h  export.h  tortoise.cpp  tortoise.hpp
example/: CMakeLists.txt  e-basic.cpp
test/: CMakeLists.txt  InferenceResult.h  t-integration.cpp
